Fixed ensure text remain visible

--- a/src/SASS/helpers/_font.scss
+++ b/src/SASS/helpers/_font.scss
@@ -7,6 +7,7 @@
     url("../fonts/ubuntu-v14-latin-regular.woff2") format("woff2"),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
       url("../fonts/ubuntu-v14-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  font-display: fallback;
 }
 
 /* ubuntu-700 - latin */
@@ -18,4 +19,5 @@
     url("../fonts/ubuntu-v14-latin-700.woff2") format("woff2"),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
       url("../fonts/ubuntu-v14-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  font-display: fallback;
 }
